Added basic classes

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -46,8 +46,9 @@
                 android:id="@+id/btnGo"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:text="Go!"
-                android:autoSizeTextType="uniform" />
+                android:autoSizeTextType="uniform"
+                android:onClick="buttonGoClick"
+                android:text="Go!" />
         </LinearLayout>
 
     </LinearLayout>
